# Drusdenx

./: .gitignore  Cargo.toml  README.md  run_benchmark.sh
benches/: database_benchmark.rs  index_loading_benchmark.rs
design/: api-facade.md  diagrams.md  index-structures.md  index.md  memory-performance.md  query-language.md  read-write-topology.md  reader-mvcc.md  refactor_plan.md  schema-analysis.md  search-execution.md  transactions.md  writer-storage.md
examples/: debug_search.rs  debug_segment_write.rs  fuzzy_search_demo.rs  hybrid_index_demo.rs  low_memory_usage.rs  optimized_usage.rs  simple_usage.rs  test_header_size.rs  test_header_sizes.rs  test_search.rs
src/: lib.rs
src/analysis/: analyzer.rs  filter.rs  mod.rs  token.rs  tokenizer.rs
src/compression/: compress.rs  delta.rs  mod.rs  vbyte.rs
src/core/: components.rs  config.rs  database.rs  database_rw.rs  engine.rs  error.rs  facade.rs  in_memory_index.rs  mod.rs  stats.rs  transaction.rs  types.rs  utils.rs
src/index/: hybrid_index_cache.rs  hybrid_index_reader.rs  index_cache.rs  index_reader.rs  index_writer.rs  inverted.rs  lazy_index_reader.rs  mod.rs  posting.rs  skiplist.rs
src/memory/: adaptive.rs  buffer_pool.rs  incremental.rs  low_memory.rs  mod.rs  pool.rs  swap.rs
src/mmap/: mmap_file.rs  mod.rs
src/mvcc/: controller.rs  mod.rs  snapshot.rs
src/parallel/: indexer.rs  merger.rs  mod.rs
src/query/: ast.rs  cache.rs  matcher.rs  mod.rs  optimizer.rs  parser.rs  planner.rs  types.rs  visitor.rs
src/reader/: lazy.rs  mod.rs  read_guard.rs  reader_pool.rs  (+2 more)
tasks/: todo.md
(+39 files in other folders)
