[package]
name = "Drusdenx"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.145"
lz4_flex = "0.11.5"
crc32fast = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
bincode = "1.3"
libc = "0.2.177"
unicode-segmentation = "1.12.0"
vtext = "0.2.0"
rust-stemmers = "1.2.0"
fst = "0.4.7"
nom = "8.0.0"
bytes = "1.10.1"
lru = "0.16.2"
parking_lot = "0.12.5"
roaring = "0.11.2"
memmap2 = "0.9.9"
crossbeam = "0.8.4"
levenshtein_automata = "0.2.1"
lz4 = "1.28.1"
regex = "1.12.2"
